syntax = "proto3";

package proto;

option java_multiple_files = true;

message DeliveryPartnerRequest {
}

message DeliveryPartnerResponse {
  int64 id = 1;
  string username = 2;
}

service DeliveryPartnerService {
  rpc GetDeliveryPartner(DeliveryPartnerRequest) returns (DeliveryPartnerResponse);
}